Use assembly-plugin to package application release